<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_login"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.travelmanager.itineary.addtrip.Sign_up"
    android:orientation="vertical"
    android:weightSum="2">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">
        <EditText
            android:id="@+id/email_signup"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:maxLength="50"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">
        <EditText
            android:id="@+id/username_signup"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:textColor="#FFFFFF"
            android:layout_marginRight="15dp"
            android:textSize="20sp"
            android:maxLength="50"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/password_signup"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:textColor="#FFFFFF"
            android:layout_marginRight="15dp"
            android:textSize="20sp"
            android:maxLength="50"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/signup"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_width="200dp"
        android:layout_weight="0.15"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_design1"
        android:layout_height="0dp"
        android:onClick="signUp"/>

</LinearLayout>