<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.travelmanager.itineary.addtrip.Log_in"
    android:orientation="vertical"
    android:background="@drawable/background_login"
    android:weightSum="3">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">
        <EditText
            android:id="@+id/email_login"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="20dp"
            android:maxLength="50"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/password_login"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="20sp"
            android:maxLength="50"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_gravity="center"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_weight="0.05"
        android:background="@drawable/button_design1"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="LogIn"/>


    <com.facebook.login.widget.LoginButton
        xmlns:facebook="http://schemas.android.com/apk/res-auto"
        facebook:com_facebook_login_text="FaceBook"
        android:id="@+id/login_button"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_weight="0.2"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#FD5488"
        android:background="@drawable/button_facebook"/>

    <TextView
        android:onClick="loginLink"
        android:layout_gravity="center"
        android:text="don't have account? Sign up"
        android:textSize="15sp"
        android:textColor="#FE9A90"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_weight="0.2"
        android:layout_height="0dp" />
</LinearLayout>